--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-29 10:42:24
+lastsearch = 2024-07-29 23:16:48
 
 [helloviettravel.com]
 match = -181.2%%
@@ -32,9 +32,9 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -156.2%%
-title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
-url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
+match = -193.8%%
+title = TOP 40 địa điểm du lịch Việt Nam nổi tiếng và hấp dẫn nhất
+url = https://vinpearl.com/vi/40-dia-diem-du-lich-viet-nam-noi-tieng-nhat-dinh-nen-den-mot-lan
 
 [thegioixecau.vn]
 match = -150.0%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -131.2%%
-title = Tổng hợp 18 địa điểm du lịch hấp dẫn nhất Long An
-url = https://www.youtube.com/watch?v=Ddo7tfEVgrI
+match = 12.5%%
+title = Bản tin Du lịch 18/7/2024
+url = https://www.youtube.com/watch?v=JPdEyoI0u4Y
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
@@ -87,9 +87,9 @@ title = Du lịch Mỹ khởi động lại sau 18 tháng đóng cửa
 url = https://lienbangtravel.com/vi/tin-tuc/258-du-lich-my-khoi-dong-lai-sau-18-thang-dong-cua
 
 [www.klook.com]
-match = -118.8%%
-title = 35 Địa Điểm Du Lịch Mỹ Hấp Dẫn Cho Kỳ Nghỉ Dài
-url = https://www.klook.com/vi/blog/dia-diem-du-lich-my/
+match = -168.8%%
+title = 42 Địa Điểm Du Lịch Gần Sài Gòn Cho Cuối Tuần Năng ...
+url = https://www.klook.com/vi/blog/diem-du-lich-gan-sai-gon/
 
 [dulichviet.com.vn]
 match = -181.2%%
