--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-29 22:16:27
+lastsearch = 2024-07-29 23:16:05
 
 [noithathomy.com]
 match = -42.9%%
@@ -12,19 +12,19 @@ title = Thảm nỉ Bali 2m x 3m TNHM02 | Hàng nhâp khẩu
 url = https://noithathomy.com/san-pham/tham-ni-bali-2m-x-3m-tnhm02/
 
 [shopee.vn]
-match = -100.0%%
-title = 50 Mẫu Thảm 2m x 3m Thảm Nỉ Bali Trải Sàn Trải Phòng ...
-url = https://shopee.vn/Tặng-Thảm-Lau-Chân-50-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.848657871.23586650302
+match = -81.0%%
+title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
+url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
-match = 23.8%%
-title = Thảm bali 2m x 3m cao cấp
-url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
+match = -81.0%%
+title = ( TẶNG THẨM CHÂN) Thảm trải sàn BALI ( 2m3 x 1m6 và ...
+url = https://www.lazada.vn/products/tang-tham-chan-tham-trai-san-bali-2m3-x-1m6-va-2m-x-3m-tham-trai-san-phong-khach-fkyfan-23m-x-16m-phong-cach-chau-au-tham-trai-san-van-phong-tham-trai-san-nha-i399940671.html
 
 [tiki.vn]
-match = -9.5%%
-title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
-url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
+match = -57.1%%
+title = Mua Thảm BaLi 5D Cao Cấp (1m6 x 2m3 & 2m x 3m)
+url = https://tiki.vn/tham-bali-5d-cao-cap-1m6-x-2m3-2m-x-3m-p149314261.html/
 
 [muachunghaiphong.com]
 match = 0.0%%
