--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-29 22:19:53
+lastsearch = 2024-07-29 23:17:51
 
 [fsapartners.ed.gov]
 match = -45.0%%
-title = 2022-2023 Federal School Code List
-url = https://fsapartners.ed.gov/sites/default/files/2022-05/2223FedSchoolCodeList.xlsx
+title = 2023-2024 Federal School Code List
+url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
 
 [finaid.org]
 match = 0.0%%
