--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-29 22:50:38
+lastsearch = 2024-07-29 23:48:53
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -29,7 +29,7 @@ url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
 [demxanh.com]
 match = 0.0%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html?srsltid=AfmBOooNfhn-G7Cgs0V_M5li3zAkL-OUfQc3waKGzXX3OetUk8onwt_s
 
 [thegioinem.com]
 match = 17.9%%
@@ -37,9 +37,9 @@ title = Bảng giá chăn ga gối đệm mới nhất
 url = https://thegioinem.com/bang-gia-chan-ga-goi-dem.html
 
 [happynest.vn]
-match = 10.7%%
-title = Bộ ga chun chần bốn mùa Happy Town EPC23048
-url = https://happynest.vn/shop/EBGCTBMEPC23048/bo-ga-chun-chan-bon-mua-happy-town-epc23048.html
+match = 50.0%%
+title = Bộ Ga chun chần EPM21071
+url = https://happynest.vn/shop/EPM21071GC/bo-ga-chun-chan-epm21071.html
 
 [chuyenhangviet.com]
 match = -25.0%%
