--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-29 18:50:49
+lastsearch = 2024-07-29 23:44:39
 
 [tiki.vn]
 match = -47.6%%
@@ -17,14 +17,14 @@ title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
 url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
-match = -128.6%%
-title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
-url = https://www.roc-taiwan.org/vn_vi/cat/47.html
+match = -42.9%%
+title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
+url = https://www.roc-taiwan.org/vn_vi/post/62.html
 
 [www.tiktok.com]
-match = -114.3%%
-title = Thanh xuân 18x2 của Hứa Quang Hán trở thành phim Đài ...
-url = https://www.tiktok.com/@dantri_sao/video/7355774561956187410?lang=en
+match = -19.0%%
+title = Cách Xem Lịch Chiếu Film Tại Taiwan
+url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
