--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-29 22:54:52
+lastsearch = 2024-07-29 23:37:59
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -49,7 +49,7 @@ url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html?srsltid=AfmBOopUj3Bn-dMg75wHbxegZJ96hB45MJNuGCY8djXvrgjvkNB9jLJC
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 
 [www.lazada.vn]
 match = 10.0%%
