--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-29 22:21:36
+lastsearch = 2024-07-29 23:44:18
 
 [everonvn.com.vn]
-match = -171.4%%
-title = Bảng giá bộ chăn ga gối trẻ em Everon Trains họa tiết in đoàn ...
-url = https://everonvn.com.vn/everon/534/bo-tre-em-trains
+match = -114.3%%
+title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity ...
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -66.7%%
-title = Ga phủ EPC19056 160x200 - Everon Quảng Bình Trang Chủ
+match = -9.5%%
+title = Everon Quảng Bình Ga phủ EPC19056 160x200
 url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -123.8%%
-title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
-url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
+match = -66.7%%
+title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
+url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
 
 [beecost.vn]
 match = -61.9%%
