--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -54,7 +54,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOorkb1KAbCkHmStIbebtFzY1LF90B3vVES-1kYC-HxugSXMYKWdY
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
 
 [thuanloitrading.com]
 match = 10.0%%
