--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-29 20:31:42
+lastsearch = 2024-07-29 23:46:53
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Chiếu trúc mắt nhỏ không viền màu trắng 160x190cm (1m6)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-160x190cm-14.html
 
 [nemsaithanh.com]
-match = -10.0%%
-title = Chiếu Trúc
-url = https://nemsaithanh.com/chieu-truc-103.html
+match = 57.9%%
+title = Chiếu Trúc Các Loại
+url = https://nemsaithanh.com/chieu-truc-cac-loai/
 
 [trangvangvietnam.com]
 match = -61.9%%
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = -109.5%%
-title = chiếu tre 1,4*1,9m hạt nâu không viền hàng Việt Nam siêu rẻ
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-1-4*1-9m-hạt-nâu-không-viền-hàng-Việt-Nam-siêu-rẻ-i.15000357.2176483881
+match = 47.6%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.lazada.vn]
 match = -66.7%%
