--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-29 22:50:18
+lastsearch = 2024-07-29 23:51:01
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -27,8 +27,8 @@ title = Congressman Mark Desaulnier | Representing the 10th ...
 url = http://desaulnier.house.gov/
 
 [account.microsoft.com]
-match = -200.0%%
-title = Microsoft account | Sign In or Create Your Account Today
+match = -226.7%%
+title = Microsoft account | Sign In or Create Your Account Today ...
 url = https://account.microsoft.com/account
 
 [www.regmovies.com]
