--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-29 22:37:23
+lastsearch = 2024-07-29 23:52:41
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Learning Hungarian on Duolingo | I was looking for a list ...
 url = https://m.facebook.com/groups/943246729103874/posts/7428405300587952/
 
 [www.instagram.com]
-match = -76.2%%
-title = SIA (@siamusic) • Instagram photos and videos
-url = https://www.instagram.com/siamusic/?hl=en
+match = -28.6%%
+title = Milla Jovovich (@millajovovich)
+url = https://www.instagram.com/millajovovich/?hl=en
 
 [www.imdb.com]
 match = -23.8%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -142.9%%
-title = A critical pronouncing dictionary. With a suppl., by E. Smith
-url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvleaLA6T&sig=ACfU3U1YrX0kNUrVLElc-qWa8Dax8u4Wqw&hl=en&sa=X&ved=2ahUKEwjpl8qZysyHAxWbmokEHbKwGFcQ6AF6BAhJEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCqaxwti&sig=ACfU3U19MljMbwSGVnieVPf_JinOF07yUg&hl=en&sa=X&ved=2ahUKEwih2eyD28yHAxVmFFkFHUHSCWoQ6AF6BAgcEAM
 
 [www.diepxuan.com]
 match = -81.0%%
