--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-29 22:46:43
+lastsearch = 2024-07-30 00:01:19
 
 [www.reddit.com]
 match = -82.6%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -117.4%%
-title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
-url = https://en.yna.co.kr/view/AEN20170907001852315
+match = -87.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [lol.fandom.com]
 match = 0.0%%
@@ -535,4 +535,14 @@ url = https://overseas.mofa.go.kr/no-en/brd/m_21237/view.do?seq=33
 match = -108.7%%
 title = 1983 Beirut barracks bombing: 'The BLT Building is gone!'
 url = https://www.marinecorpstimes.com/news/your-marine-corps/2019/10/23/1983-beirut-barracks-bombing-the-blt-building-is-gone/
+
+[www.chathamhouse.org]
+match = -108.7%%
+title = Americas | Chatham House – International Affairs Think Tank
+url = https://www.chathamhouse.org/regions/americas
+
+[archive.registrar.ufl.edu]
+match = -104.3%%
+title = Description of Courses - Registrar - University of Florida
+url = https://archive.registrar.ufl.edu/catalog/catalogarchive/99-00-catalog/courses/26_Course Descriptions 2.html
 
