--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-29 17:53:43
+lastsearch = 2024-07-29 23:49:16
 
 [bilystore.vn]
 match = -95.2%%
 title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/?srsltid=AfmBOopcLmsUh9MkWQBpjCmlaQKVWRWqhCRmWsfgb7W7E60YQ3WRqIoa
+url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
 match = -33.3%%
