--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-29 22:44:34
+lastsearch = 2024-07-29 23:57:29
 
 [everonvn.com.vn]
 match = 0.0%%
 title = Vỏ Gối Everon Giảm Giá Es1366
-url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366
+url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366?srsltid=AfmBOopd2W1Zh43hIkh7DLXLBdHr9eEeHjw1_NAFxjadN9lnfKTyLLyJ
 
 [www.lazada.vn]
 match = -161.1%%
 title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOoqKOhZ-mSk6OT-20F4mr11yy6fS5By4QqJnKkmCxSDWidjz-Wvv
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,7 +34,7 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = 5.6%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOoqVLytxAIIwaiGRL5cNRsCqVSfmeLrRznorpag3TjwiTHjvyT1Q
 
 [www.everonqb.com]
 match = -100.0%%
