--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -158.8%%
 title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnhi64eR&sig=ACfU3U12AXinUJqK5it2qEPUW68p8BuRTw&hl=en&sa=X&ved=2ahUKEwiS8YzJuMyHAxW9EDQIHY-vGXQQ6AF6BAgbEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnhk52iR&sig=ACfU3U0ogjx-0TMNX86wl-B50Z8i9RMRmA&hl=en&sa=X&ved=2ahUKEwihhLvg_syHAxWLF1kFHRJREOIQ6AF6BAhCEAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -202,9 +202,9 @@ title = Ảnh: Màn trình diễn pháo hoa tuyệt đẹp của hai đội Mỹ
 url = https://toquoc.vn/anh-man-trinh-dien-phao-hoa-tuyet-dep-cua-hai-doi-my-va-y-20240615215349092.htm
 
 [www.youtube.com]
-match = -205.9%%
-title = Live chậu 16, chậu thiết kế , combo denro đủ loại xả vườn ...
-url = https://www.youtube.com/watch?v=5TE5FPCetvE
+match = -164.7%%
+title = Intruder HOA Guy Fell Into My Pool - Caught On Camera
+url = https://www.youtube.com/shorts/hMyLkrY7ND8
 
 [communityassociations.net]
 match = -35.3%%
