--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-29 22:32:51
+lastsearch = 2024-07-30 02:37:41
 
 [screenrant.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -64.3%%
-title = I am Married to a U.S. Citizen
-url = https://www.uscis.gov/citizenship/learn-about-citizenship/citizenship-and-naturalization/i-am-married-to-a-us-citizen
+match = -7.1%%
+title = Explore my Options
+url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
 match = -157.1%%
@@ -87,9 +87,9 @@ title = Green card
 url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = 0.0%%
-title = Green Book (2018)
-url = https://www.imdb.com/title/tt6966692/
+match = -92.9%%
+title = Blue Eye Samurai (TV Series 2023)
+url = https://www.imdb.com/title/tt13309742/
 
 [www.boundless.com]
 match = -128.6%%
