--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-07-29 22:50:59
+lastsearch = 2024-07-30 02:33:36
 
 [www.everonvn.vn]
-match = 80.8%%
-title = Đệm lò xo Everon Pocket Pops
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Pocket-Pops.html
+match = -61.5%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [www.diepxuan.com]
 match = 61.5%%
@@ -27,9 +27,9 @@ title = Đệm Lò Xo Everon Pocket Pops
 url = https://demchinhhang.com/products/dem-lo-xo-tui-everon-pocket-pops
 
 [nemhana.com]
-match = 11.5%%
-title = Nệm lò xo King Koil Pocket Firm - Nệm Hana
-url = https://nemhana.com/nem-lo-xo-king-koil-pocket-firm/
+match = -53.8%%
+title = Khám phá bí quyết tái tạo mỗi ngày cùng nệm Everon
+url = https://nemhana.com/nem-everon/
 
 [go2joyvn.myharavan.com]
 match = 26.9%%
@@ -62,8 +62,8 @@ title = Nệm lò xo túi Everon Pocket pops 2024
 url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 
 [everon.com.vn]
-match = -34.6%%
-title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
+match = -19.2%%
+title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
 url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
@@ -110,4 +110,9 @@ url = https://tongdailyeveron.com.vn/collections/dem-nem
 match = -19.2%%
 title = everon truck - Korean Pillows & Blankets
 url = https://everonvietnam.com/en/dem-lo-xo-everon/
+
+[bedding.vn]
+match = 30.8%%
+title = Đệm lò xo túi Everon Pocket Pops cao 25cm
+url = https://bedding.vn/dem-lo-xo-tui-everon-pocket-pops/
 
