--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-29 23:47:50
+lastsearch = 2024-07-30 02:26:26
 
 [everonvn.com.vn]
 match = -12.5%%
 title = Tấm trải chần Everon chất liệu 100%% cotton
-url = https://everonvn.com.vn/everon/2166/tam-trai-everon?srsltid=AfmBOoowSTKNBgxrQT2Y2McJyeittWG4FWCe-2Nu7smlOtHR4pywgZ1v
+url = https://everonvn.com.vn/everon/2166/tam-trai-everon
 
 [everonthaiha.com]
 match = 35.3%%
@@ -17,9 +17,9 @@ title = Tấm trải - Topper
 url = https://everonthaiha.com/nhom-san-pham/309/tam-trai-topper.html
 
 [kbedding.vn]
-match = -54.2%%
-title = Tấm Topper Xanh Lá Everon Lite ELM203-1 - K-Bedding
-url = https://kbedding.vn/product/tam-topper-xanh-la-everon-lite-elm203-1/
+match = -41.7%%
+title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
+url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
 
 [everon.online]
 match = -8.3%%
@@ -27,9 +27,9 @@ title = Topper Everon - Tấm Tăng Tiện Nghi
 url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
-match = -37.5%%
-title = Tấm Trải đa Năng Everon Giá Tốt T06/2024 - Lazada
-url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/?srsltid=AfmBOopHo2cPOYxOlCSb4BAkhZGZAUlZDRLbVDo9h5Wy_0zubyYltkS8
+match = -66.7%%
+title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [www.everonvn.vn]
 match = -20.8%%
