--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-30 00:33:31
+lastsearch = 2024-07-30 02:40:51
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -92,8 +92,8 @@ title = Giường trẻ em EB055
 url = https://anawood.vn/product/giuong-tre-em-eb055/
 
 [mozano.vn]
-match = -109.1%%
-title = Tham khảo: Kích thước các loại đệm bán chạy nhất hiện nay
+match = -72.7%%
+title = Kích thước các loại đệm bán chạy nhất hiện nay
 url = https://mozano.vn/kich-thuoc-cac-loai-dem-864.htm
 
 [nemkimdinh.com]
